--- a/Pages/TransMatrixCard/MatrixCard.xaml
+++ b/Pages/TransMatrixCard/MatrixCard.xaml
@@ -1,6 +1,9 @@
-﻿<UserControl x:Class="CNC_Improvements_gcode_solids.Pages.TransMatrixCard.MatrixCard"
+﻿<!-- File: Pages/TransMatrixCard/MatrixCard.xaml
+     Position: REPLACE THE ENTIRE FILE CONTENT WITH THIS -->
+<UserControl x:Class="CNC_Improvements_gcode_solids.Pages.TransMatrixCard.MatrixCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:utils="clr-namespace:CNC_Improvements_gcode_solids.Utilities"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
@@ -110,6 +113,8 @@
 
                 <ListView ItemsSource="{Binding Regions}"
                           SelectedItem="{Binding SelectedRegion, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                          SelectionMode="Extended"
+                          utils:ListViewSelectedItemsBehavior.SelectedItems="{Binding SelectedRegions}"
                           Height="80"
                           ScrollViewer.VerticalScrollBarVisibility="Auto"
                           ScrollViewer.HorizontalScrollBarVisibility="Disabled">
