--- a/Pages/SettingsPage.xaml
+++ b/Pages/SettingsPage.xaml
@@ -6,7 +6,7 @@
       mc:Ignorable="d"
       Background="#222">
 
-    <Grid Margin="10">
+    <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -15,7 +15,8 @@
 
         <TextBlock Grid.Row="0"
                    Text="Settings"
-                   
+                   Visibility="Visible"
+                   Foreground="#DDD"
                    FontSize="18"
                    FontWeight="SemiBold"
                    Margin="0,0,0,5"/>
@@ -59,37 +60,47 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
 
                             <!-- ProfileColor -->
                             <TextBlock Grid.Row="0" Foreground="#DDD" Grid.Column="0" Text="Profile"  VerticalAlignment="Center"/>
-                            <TextBox x:Name="TxtProfileColor" Grid.Row="0" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged"/>
-                            <Button Grid.Row="0" Grid.Column="2" Content="Pick..." Tag="TxtProfileColor" Click="BtnPickColor_Click" Margin="3,4,0,4"/>
-                            <Rectangle x:Name="RectProfileColor" Grid.Row="0" Grid.Column="3" Width="30" Height="20" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
+                            <TextBox x:Name="TxtProfileColor" Grid.Row="0" Height="18" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged"/>
+                            <Button Grid.Row="0" Grid.Column="2" Height="18" Content="Pick..." Tag="TxtProfileColor" Click="BtnPickColor_Click" Margin="3,4,0,4" Width="35" Padding="1,-2,1,-1"/>
+                            <Rectangle x:Name="RectProfileColor" Grid.Row="0" Grid.Column="3" Width="30" Height="18" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
 
                             <!-- OffsetColor -->
                             <TextBlock Grid.Row="1" Foreground="#DDD" Grid.Column="0" Text="Offset"  VerticalAlignment="Center"/>
-                            <TextBox x:Name="TxtOffsetColor" Grid.Row="1" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged"/>
-                            <Button Grid.Row="1" Grid.Column="2" Content="Pick..." Tag="TxtOffsetColor" Click="BtnPickColor_Click" Margin="3,4,0,4"/>
-                            <Rectangle x:Name="RectOffsetColor" Grid.Row="1" Grid.Column="3" Width="30" Height="20" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
+                            <TextBox x:Name="TxtOffsetColor" Grid.Row="1" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged" Height="18"/>
+                            <Button Grid.Row="1" Grid.Column="2" Content="Pick..." Tag="TxtOffsetColor" Click="BtnPickColor_Click" Margin="3,4,0,4" Width="35" Height="18" Padding="1,-2,1,-1"/>
+                            <Rectangle x:Name="RectOffsetColor" Grid.Row="1" Grid.Column="3" Width="30" Height="18" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
 
                             <!-- ClosingColor -->
                             <TextBlock Grid.Row="2" Foreground="#DDD" Grid.Column="0" Text="Closing"  VerticalAlignment="Center"/>
-                            <TextBox x:Name="TxtClosingColor" Grid.Row="2" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged"/>
-                            <Button Grid.Row="2" Grid.Column="2" Content="Pick..." Tag="TxtClosingColor" Click="BtnPickColor_Click" Margin="3,4,0,4"/>
-                            <Rectangle x:Name="RectClosingColor" Grid.Row="2" Grid.Column="3" Width="30" Height="20" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
+                            <TextBox x:Name="TxtClosingColor" Grid.Row="2" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged" Height="18"/>
+                            <Button Grid.Row="2" Grid.Column="2" Content="Pick..." Tag="TxtClosingColor" Click="BtnPickColor_Click" Margin="3,4,0,4" Width="35" Height="18" Padding="1,-2,1,-1"/>
+                            <Rectangle x:Name="RectClosingColor" Grid.Row="2" Grid.Column="3" Width="30" Height="18" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
 
                             <!-- CLColor -->
                             <TextBlock Grid.Row="3" Foreground="#DDD" Grid.Column="0" Text="CL"  VerticalAlignment="Center"/>
-                            <TextBox x:Name="TxtCLColor" Grid.Row="3" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged"/>
-                            <Button Grid.Row="3" Grid.Column="2" Content="Pick..." Tag="TxtCLColor" Click="BtnPickColor_Click" Margin="3,4,0,4"/>
-                            <Rectangle x:Name="RectCLColor" Grid.Row="3" Grid.Column="3" Width="30" Height="20" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
+                            <TextBox x:Name="TxtCLColor" Grid.Row="3" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged" Height="18"/>
+                            <Button Grid.Row="3" Grid.Column="2" Content="Pick..." Tag="TxtCLColor" Click="BtnPickColor_Click" Margin="3,4,0,4" Width="35" Height="18" Padding="1,-2,1,-1"/>
+                            <Rectangle x:Name="RectCLColor" Grid.Row="3" Grid.Column="3" Width="30" Height="18" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
 
                             <!-- GraphicTextColor -->
                             <TextBlock Grid.Row="4" Foreground="#DDD" Grid.Column="0" Text="GraphText"  VerticalAlignment="Center"/>
-                            <TextBox x:Name="TxtGraphicTextColor" Grid.Row="4" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged"/>
-                            <Button Grid.Row="4" Grid.Column="2" Content="Pick..." Tag="TxtGraphicTextColor" Click="BtnPickColor_Click" Margin="3,4,0,4"/>
-                            <Rectangle x:Name="RectGraphicTextColor" Grid.Row="4" Grid.Column="3" Width="30" Height="20" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
+                            <TextBox x:Name="TxtGraphicTextColor" Grid.Row="4" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged" Height="18"/>
+                            <Button Grid.Row="4" Grid.Column="2" Content="Pick..." Tag="TxtGraphicTextColor" Click="BtnPickColor_Click" Margin="3,4,0,4" Width="35" Height="18" Padding="1,-2,1,-1"/>
+                            <Rectangle x:Name="RectGraphicTextColor" Grid.Row="4" Grid.Column="3" Width="30" Height="18" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
+
+                            <!-- GraphicTextColor -->
+                            <TextBlock Grid.Row="5" Foreground="#DDD" Grid.Column="0" Text="GridColor"  VerticalAlignment="Center"/>
+                            <TextBox x:Name="TxtGridColor" Grid.Row="5" Grid.Column="1" Margin="8,3,8,3" TextChanged="ColorText_TextChanged" Height="18"/>
+                            <Button Grid.Row="5" Grid.Column="2" Content="Pick..." Tag="TxtGridColor" Click="BtnPickColor_Click" Margin="3,4,0,4" Width="35" Height="18" Padding="1,-2,1,-1"/>      
+                            <Rectangle x:Name="RectGridColor" Grid.Row="5" Grid.Column="3" Width="30" Height="18" RadiusX="3" RadiusY="3" Stroke="#888" Margin="8,4,4,4"/>
+
+
+
                         </Grid>
                     </StackPanel>
                 </Border>
@@ -109,6 +120,7 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
 
                             <TextBlock Grid.Row="0" Foreground="#DDD" Grid.Column="0" Text="ProfileWidth"  VerticalAlignment="Center"/>
@@ -122,6 +134,9 @@
 
                             <TextBlock Grid.Row="3" Foreground="#DDD" Grid.Column="0" Text="CLWidth"  VerticalAlignment="Center"/>
                             <TextBox x:Name="TxtCLWidth" Grid.Row="3" Grid.Column="1" Margin="8,3,0,3"/>
+                            
+                            <TextBlock Grid.Row="4" Foreground="#DDD" Grid.Column="0" Text="GridWidth"  VerticalAlignment="Center"/>
+                            <TextBox x:Name="TxtGridWidth" Grid.Row="4" Grid.Column="1" Margin="8,3,0,3"/>
 
 
                         </Grid>
